--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,17 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.0",
+    "@primevue/forms": "^4.3.6",
+    "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.6",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.17",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
