--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+FRONTEND_URL=http://localhost:5173
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -16,11 +17,13 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=false
+SESSION_SAME_SITE=lax
 
 MEMCACHED_HOST=127.0.0.1
 
